--- a/Editor/Katas.UniMod.Editor.asmdef
+++ b/Editor/Katas.UniMod.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:35f464a4835088d4f9f5bbced099ed10"
+        "GUID:35f464a4835088d4f9f5bbced099ed10",
+        "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297"
     ],
     "includePlatforms": [
         "Editor"
