--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "com.katas.unimod",
   "version": "0.1.0",
-  "unity": "2021.3",
+  "unity": "2022.3",
   "dependencies": {
     "com.unity.nuget.newtonsoft-json": "3.0.2",
     "com.unity.addressables": "1.19.19",
-    "com.cysharp.unitask": "2.3.1"
+    "com.cysharp.unitask": "2.3.1",
+    "com.ourpalm.ilruntime": "2.1.0"
   },
   "displayName": "UniMod",
   "description": "Adds modding support to your Unity project.",
