--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "com.unity.nuget.newtonsoft-json": "3.0.2",
     "com.unity.addressables": "1.19.19",
-    "com.cysharp.unitask": "2.3.1"
+    "com.cysharp.unitask": "2.3.1",
+    "com.code-philosophy.hybridclr": "5.2.1"
   },
   "displayName": "UniMod",
   "description": "Adds modding support to your Unity project.",
